# traffic-flow-analysis

./: .env.sample  .gitignore  LICENSE  README.md  package.json
.github/workflows/: node_frontend_unit_test.yml  rust_unit_test_backend.yml
backend/: Cargo.toml  README.md  Rocket.toml  Sample-Rocket.toml  sample.env
backend/src/: main.rs
backend/src/api/: alive.rs  count.rs  density.rs  flow.rs  flow_data.rs  hello.rs  mod.rs  singleton_test.rs  vehicle_data.rs  weather_data.rs
backend/src/pytorch_models/: car_num_model.pt  heavy_vehicle_num_model.pt  motorcycle_num_model.pt  road_density_model.pt  total_vehicle_num_model.pt  traffic_flow_model.pt  vehicle_count_model.pt
backend/src/service/: database_connection.rs  inferencer.rs  mod.rs  prediction_model.rs  predictor.rs
backend/src/service/predictor/: inference.rs  inferencer_impl.rs  mod.rs  pre_process.rs  test.rs
backend/src/utils/: datetime_serde.rs  input_validation.rs  mod.rs  schemars.rs
data_collection/: README.md  main_red_flows.json  mobile_red_flow.json
frontend/: README.md  package-lock.json  package.json  sample.env
frontend/cypress/e2e/: explore.cy.ts  home.cy.ts
frontend/src/: App.vue  axios.ts  main.ts
frontend/src/components/: ExploresCard-L.vue  ExploresCard-R.vue  ExploresCount.vue  PredictionCharts.vue  TrafficFlowSpeedChart.vue  VehicleCountChart.vue  WeatherPieChart.vue
frontend/src/lib/: color_generation.ts  (+2 more)
notebook/: main_carmodel_construct_no_day.ipynb  model_construction.ipynb  requirements.txt  traffic_data.csv
tester/: Cargo.toml  README.md  sample.env
tester/src/: main.rs  test_count.rs  test_desc.rs  test_flow.rs
(+6 files in other folders)
