[package]
name = "traffic-flow-api"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
chrono-tz = "0.10.3"
dotenv = "0.15.0"
pkg-config = "0.3.32"
rocket = {version = "0.5.1", features = ["json"]}
rocket_okapi = { version = "0.9.0", features = ["swagger", "rocket_db_pools"] }
schemars = "0.8.22"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.140"
tch = "0.19.0"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_mysql"]
